minor update index.html-added kaggle link, changed github logo color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,7 @@ figure, p {
 }
 
 a {
-  color: #fff;
+  color: #7166d4;
 
   -webkit-transition: all .3s ease-in 0s;
      -moz-transition: all .3s ease-in 0s;
