--- a/templates/index.html
+++ b/templates/index.html
@@ -150,8 +150,9 @@
 							<div class="service-desc">
 								<h3>Data Sourcing and Cleanup</h3>
 								<p>Our group used a Kaggle dataset which contains over 55,000 records of video games and their scores and sales. Once this was loaded into Jupyter notebook the preprocessing and data cleanup started to get the data ready for the machine learning function. This included dropping columns that were unrelated and data that was either empty or contained null values. 
+<br></br>
+									<a href="https://www.kaggle.com/ashaheedq/video-games-sales-2019?select=vgsales-12-4-2019.csv" target="_blank">View Kaggle Dataset</a> 
 
-									Kaggle url: 
 									</p>
 							</div>
 						</div>
@@ -518,7 +519,7 @@
             <div class="container">
                 <div class="row">
     
-					<img src="/static/img/GitHub-Mark-64px.png" alt="github">
+					<img src="/static/img/GitHub-Mark-Light-64px.png" alt="github">
 					<a class="btn btn-secondary btn-lg" href="https://github.com/michelleherman13/project-4" role="button">Project Repository</a>			
 
                         </div>
