--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
 					<div class="col-md-4 wow fadeInLeft" data-wow-duration="500ms">
 						<div class="service-item">
 							<div class="service-icon">
-								<i class="fa fa-github fa-2x"></i>
+								<i class="fa fa-bar-chart fa-2x"></i>
 							</div>
 							
 							<div class="service-desc">
@@ -178,7 +178,7 @@
 					<div class="col-md-4 wow fadeInRight" data-wow-duration="500ms"  data-wow-delay="900ms">
 						<div class="service-item">
 							<div class="service-icon">
-								<i class="fa fa-bullhorn fa-2x"></i>
+								<i class="fa fa-cloud-download fa-2x"></i>
 							</div>
 							
 							<div class="service-desc">
