--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@
 /* =================================== */
 
 body {
-  background-color: #fff;
+  background-color: hsla(0, 0%, 100%, 0.781);
   font-family: 'Open Sans', sans-serif;
   line-height: 21px;
 font-size: 13px;
@@ -22,7 +22,7 @@ figure, p {
 }
 
 a {
-  color: #7166d4;
+  color: #C7CED3;
 
   -webkit-transition: all .3s ease-in 0s;
      -moz-transition: all .3s ease-in 0s;
@@ -65,15 +65,13 @@ margin: 0;
 }
 
 span.color {
-color: #050212;
+color: #0c0c0c;
 }
 
 body > section,
 .footer {
 padding: 70px 0;
 }
-
-.sec-title {}
 
 .sec-title h2 {
 color: #050212;
@@ -131,7 +129,7 @@ z-index: 1100;
 
 #preloader > img {
 left: 47%;
-position: absolute;
+position: relative;
 top: 48%;
 }
 
@@ -323,8 +321,6 @@ margin-bottom: 25px;
 }
 
 
-
-
 /*=========================================
 Our Works
 ==========================================*/
@@ -431,54 +427,8 @@ font-size: 14px;
 line-height: 24px;
 }
 
-
-
 /*=========================================
-Our Team Member
-==========================================*/
-
-.member-thumb {
-width: 273px;
-position: relative;
-}
-
-.member-thumb .overlay h5 {
-font-size: 16px;
-font-weight: 700;
-line-height: 24px;
-margin: 10px 0;
-}
-
-.member-thumb .overlay {
-font-size: 16px;
-padding: 20px;
-line-height: 24px;
-}
-
-.team-member h4 {
-color: #062033;
-font-size: 18px;
-font-weight: 600;
-line-height: 24px;
-margin: 15px 0 8px;
-}
-
-.member-thumb:hover .overlay {
-cursor: pointer;
-opacity: 1;
-filter: alpha(opacity=100);
-
--webkit-transform: rotateY(0deg) scale(1,1);
-   -moz-transform: rotateY(0deg) scale(1,1);
-  -ms-transform: rotateY(0deg) scale(1,1);
-   -o-transform: rotateY(0deg) scale(1,1);
-      transform: rotateY(0deg) scale(1,1);
-}
-
-
-
-/*=========================================
-Some fun facts
+vgame stats
 ==========================================*/
 
 #facts {
@@ -533,100 +483,8 @@ line-height: 24px;
 margin-top: 15px;
 text-transform: uppercase;
 }
-
-
 /*=========================================
-Contact Us
-==========================================*/
-
-.contact {
-padding-bottom: 0;
-}
-
-.contact-address h3 {
-color: #062033;
-font-size: 22px;
-line-height: 32px;
-margin-bottom: 25px;
-}
-
-.contact-address p {
-line-height: 24px;
-}
-
-.contact-form {}
-
-.contact-form h3 {
-color: #062033;
-font-size: 24px;
-font-weight: 700;
-line-height: 32px;
-margin-bottom: 25px;
-}
-
-.contact-form .input-group {
-width: 100%;
-}
-
-.contact-form .form-control {
-border-color: -moz-use-text-color -moz-use-text-color #cccccc;
-border-radius: 0;
-border-style: none none solid;
-border-width: 0 0 1px;
-box-shadow: none;
-margin-bottom: 10px;
-}
-
-.contact-form .input-field {
-width: 48%;
-float: left;
-margin-right: 4%;
-}
-
-.contact-form .input-field:last-child {
-margin-right: 0;
-}
-
-.contact-form .form-control.error {
-border-bottom-color: #c0392b;
-}
-
-label.error {
-color: #c0392b;
-font-weight: normal;
-text-transform: capitalize;
-}
-
-.contact-form #form-submit {
-background: url("../img/envelop.png") no-repeat scroll 0 15px transparent;
-border: 0 none;
-color: #000;
-font-size: 16px;
-line-height: 24px;
-padding: 10px;
-text-align: right;
-width: 150px;
-}
-
-.footer-social {
-margin-top: 17px;
-}
-
-.footer-social li a {
-color: #cdd2d6;
-display: block;
-margin-bottom: 10px;
-}
-
-#map_canvas {
-height: 215px;
-width: 100%;
-}
-
-
-
-/*=========================================
-Contact Us
+Footer
 ==========================================*/
 
 
@@ -680,8 +538,6 @@ top: 6px;
 line-height: 24px;
 }
 
-.footer-single ul {
-}
 
 .footer-single li {
 line-height: 32px;
@@ -714,7 +570,10 @@ z-index: 9;
 
 * { box-sizing: border-box; }
 body {
-font: 12px Arial; 
+font-size: 18px;
+font-family: 'Rajdhani', sans-serif; 
+
+
 }
 .autocomplete {
 /*the container must be positioned relative:*/
@@ -723,7 +582,7 @@ display: inline-block;
 }
 input {
 border: 1px solid transparent;
-background-color: #f1f1f1;
+background-color: hsl(0, 0%, 95%);
 padding: 10px;
 font-size: 16px;
 }
@@ -737,7 +596,7 @@ color: #fff;
 }
 .autocomplete-items {
 position: absolute;
-border: 1px solid #d4d4d4;
+border: 1px solid #0f0663;
 border-bottom: none;
 border-top: none;
 z-index: 99;
@@ -750,14 +609,14 @@ right: 0;
 padding: 10px;
 cursor: pointer;
 background-color: #fff; 
-border-bottom: 1px solid #d4d4d4; 
+border-bottom: 1px solid #1b0e4b; 
 }
 .autocomplete-items div:hover {
 /*when hovering an item:*/
-background-color: #e9e9e9; 
+background-color: #d4c1dd; 
 }
 .autocomplete-active {
 /*when navigating through the items using the arrow keys:*/
 background-color: rgb(160, 107, 245) !important; 
-color: #ffffff; 
+color: #ffffff;
 }
