--- a/templates/index.html
+++ b/templates/index.html
@@ -172,7 +172,7 @@
 							
 							<div class="service-desc">
 								<h3>Development</h3>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+								<p>Once a clean dataset was obtained it was time to start changing the categorical data to numerical for testing by using get dummies. The machine learning algorithm we used for our recommender was K- nearest neighbors. This allows us to pull the nearest neighbors based on the users input and make a recommendation.</p>
 							</div>
 						</div>
 					</div>
@@ -187,7 +187,7 @@
 							
 							<div class="service-desc">
 								<h3>Implementation and Analysis</h3>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+								<p>Using the Jaccard Metric option our nearest neighbors algorithm was able to accurately make recommendations to the users input. We also added another option for the user if they wanted to get recommendations based on the console they have as well as a minimum critic score.</p>
 							</div>
 						</div>
 					</div>
