change navbar font color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -22,7 +22,7 @@ figure, p {
 }
 
 a {
-  color: #C7CED3;
+  color: #51BEF1;
 
   -webkit-transition: all .3s ease-in 0s;
      -moz-transition: all .3s ease-in 0s;
