--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -271,7 +271,7 @@
         <script>
             $(document).ready(function() {
                 
-                $("li").click(function() {
+                $("#nav").click(function() {
                     $("a")[0].click();
                 });                            
             });
