--- a/templates/generator.html
+++ b/templates/generator.html
@@ -130,6 +130,9 @@
                <section id="model" class="model col-lg-12">
 				   <br></br>
 				<h1 class="white-text" style="color: white; text-align:center">Video Game Recommendor</h1>
+				<br>
+				<br>
+				<h2 class="white-text" style="color: white; text-align:center">Please visit the Directory for the complete game list</h2>
 				</section>
 				<section id="model" class="model col-lg-6 col-md-6">
 					<div class="card">
