button margin and dir menu fix

--- a/templates/generator.html
+++ b/templates/generator.html
@@ -143,7 +143,7 @@
 						  <br></br>
 						  <br></br>
 						  <div class="form-group">
-							 <div class="col-sm-offset-2 col-sm-4">
+							 <div class="col-sm-offset-2 col-sm-4" style="margin-left: inherit;">
 								<button style="width: auto !important;" type="button" class="btn btn-lg btn-block" style= "color: white" id="gameSubmit">Get Recommendation</button>
 							 </div>
 						  </div>
