--- a/templates/table.html
+++ b/templates/table.html
@@ -258,7 +258,7 @@
         <script>
             $(document).ready(function() {
                 
-                $("li").click(function() {
+                $("#nav").click(function() {
                     $("a")[0].click();
                 });                            
             });
