update main.css for fonts, index stats, and readme

--- a/templates/index.html
+++ b/templates/index.html
@@ -222,17 +222,17 @@
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms">
 							<div class="counters-item">
 								<i class="fa fa-clock-o fa-3x"></i>
-								<strong data-to="1000 ">0</strong>
+								<strong data-to="356">0</strong>
 								<!-- Set Your Number here. i,e. data-to="56" -->
-								<p>game stats etc</p>
+								<p><strong>Thousand</strong>Most Played Game on Steam Currently: Counter-Strike </p>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="300ms">
 							<div class="counters-item">
 								<i class="fa fa-users fa-3x"></i>
-								<strong data-to="120">0</strong>
+								<strong data-to="227">0</strong>
 								<!-- Set Your Number here. i,e. data-to="56" -->
-								<p>Top Game Sales</p>
+								<p><strong>Million</strong>Gamers in the USA</p>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="600ms">
@@ -240,15 +240,15 @@
 								<i class="fa fa-rocket fa-3x"></i>
 								<strong data-to="360">0</strong>
 								<!-- Set Your Number here. i,e. data-to="56" -->
-								<p> Vgames</p>
+								<p> <strong>Thousand</strong>Current Trending Game on Steam: Fortnite Chapter 2</p>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow fadeInUp animated" data-wow-duration="500ms" data-wow-delay="900ms">
 							<div class="counters-item">
 								<i class="fa fa-trophy fa-3x"></i>
-								<strong data-to="6454">0</strong>
+								<strong data-to="155">0</strong>
 								<!-- Set Your Number here. i,e. data-to="56" -->
-								<p>Vgames</p>
+								<p><strong>Million</strong>Best-Selling Video Game Platform of All-Time:Play Station 2</p>
 							</div>
 						</div>
 						<!-- end first count item -->
